Generación de flujo

--- a/src/app/view/a-view/a-view.scss
+++ b/src/app/view/a-view/a-view.scss
@@ -17,4 +17,11 @@
       margin-bottom: 0;
     }
   }
+  .a-input {
+    font-size: 50px;
+      margin-top: 10%;
+      width: 300px;
+      height: 100px;
+      margin-bottom: 0;
+  }
 }
