Trabajar con estilos css

--- a/src/app/view/a-view/a-view.scss
+++ b/src/app/view/a-view/a-view.scss
@@ -1,7 +1,7 @@
 .a-view {
   .a-container {
     font-size: 160px;
-    background-color: #F8CECC;
+    background-color: #F9CFCC;
     width: 100%;
     height: 100%;
     text-align: center;
