--- a/src/app/view/d-view/d-view.scss
+++ b/src/app/view/d-view/d-view.scss
@@ -1,7 +1,7 @@
 .d-view {
   .d-container {
     font-size: 160px;
-    background-color: #b6cff9;
+    background-color: #DAE8FC;
     width: 100%;
     height: 100%;
     text-align: center;
