--- a/src/app/view/b-view/b-view.scss
+++ b/src/app/view/b-view/b-view.scss
@@ -1,7 +1,7 @@
 .b-view {
   .b-container {
     font-size: 160px;
-    background-color: #c6f4d8;
+    background-color: #D4E7D4;
     width: 100%;
     height: 100%;
     text-align: center;
