--- a/src/app/view/c-view/c-view.scss
+++ b/src/app/view/c-view/c-view.scss
@@ -1,20 +1,59 @@
+@import '../../../core/variables.scss';
+
+button {
+  font-size: 50px;
+  margin-top: 20px;
+  width: 300px;
+  height: 100px;
+  margin-bottom: 0;
+}
 .c-view {
   .c-container {
     font-size: 160px;
-    background-color: #f4f0c6;
-    width: 100%;
-    height: 100%;
+    border: $borde $color-borde-pastel;
     text-align: center;
     display: flex;
     justify-content:center;
     align-items: center;
     flex-direction: column;
-    button {
-      font-size: 50px;
-      margin-top: 20px;
-      width: 300px;
-      height: 100px;
-      margin-bottom: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .c-estilo-1 {
+    background-color: $primary;
+    color: #F94599;
+    label {
+      color: #F82600;
+      font-size: 140px;
     }
+
+  }
+  .c-estilo-2 {
+    background-color: $secondary;
+    color: #0D1A99;
+    label {
+      color: #999EFF;
+      font-size: 140px;
+    }
+  }
+  .c-boton-pastel {
+    background-color: $pastel; 
+    border: $borde $color-borde-pastel;
+  }
+  .c-boton-rosa {
+    background-color: $rosa; 
+    border: $borde $color-borde-rosa;
+  }
+  .c-boton-lila {
+    background-color: $lila; 
+    border: $borde $color-borde-lila;
+  }
+  .c-boton-verde {
+    background-color: $verde; 
+    border: $borde $color-borde-verde;
+  }
+  .c-boton-azul {
+    background-color: $azul; 
+    border: $borde $color-borde-azul;
   }
 }
