--- a/src/app/view/d-view/d-view.scss
+++ b/src/app/view/d-view/d-view.scss
@@ -1,3 +1,10 @@
+button {
+  font-size: 50px;
+  margin-top: 20px;
+  width: 300px;
+  height: 100px;
+  margin-bottom: 0;
+}
 .d-view {
   .d-container {
     font-size: 160px;
@@ -9,12 +16,5 @@
     justify-content:center;
     align-items: center;
     flex-direction: column;
-    button {
-      font-size: 50px;
-      margin-top: 20%;
-      width: 300px;
-      height: 100px;
-      margin-bottom: 0;
-    }
   }
 }
